tests/snapshots/run_wpt_conformance__litert_gruCell_float32_tensors_with_all_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
gru_cell.https.any.js gruCell float32 tensors with all options, litert
 Failed to convert graph: graph conversion failed for litert: unsupported operation: GruCell { input: 2, weight: 5, recurrence: 4, hidden_state: 1, hidden_size: 4, options: Some(MLGruCellOptions { label: "", bias: Some(0), recurrent_bias: Some(3), reset_after: false, layout: "zrn", activations: Some(["relu", "relu"]) }), outputs: [6] }

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    gruCellBias: f32[12];
    gruCellHiddenState: f32[3, 4];
    gruCellInput: f32[3, 2];
    gruCellRecurrentBias: f32[12];
    gruCellRecurrentWeight: f32[12, 4];
    gruCellWeight: f32[12, 2];
  }

  nodes {
    [gruCellOutput] = gruCell(gruCellInput, gruCellWeight, gruCellRecurrentWeight, gruCellHiddenState, gruCellBias, gruCellRecurrentBias, activations=["relu", "relu"], bias=0, label="", layout="zrn", recurrentBias=3, resetAfter=false);
  }

  outputs { gruCellOutput; }
}
