tests/snapshots/run_wpt_conformance__litert_gru_float32_tensors_steps_2_with_all_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
gru.https.any.js gru float32 tensors steps=2 with all options, litert
 Failed to convert graph: graph conversion failed for litert: unsupported operation: Gru { input: 2, weight: 5, recurrence: 4, steps: 2, hidden_size: 4, options: Some(MLGruOptions { label: "", bias: Some(0), recurrent_bias: Some(3), initial_hidden_state: Some(1), reset_after: false, return_sequence: true, direction: "backward", layout: "zrn", activations: Some(["relu", "relu"]) }), outputs: [6, 7] }

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    gruBias: f32[1, 12];
    gruInitialHiddenState: f32[1, 3, 4];
    gruInput: f32[2, 3, 2];
    gruRecurrentBias: f32[1, 12];
    gruRecurrentWeight: f32[1, 12, 4];
    gruWeight: f32[1, 12, 2];
  }

  nodes {
    [gruOutput1, gruOutput2] = gru(gruInput, gruWeight, gruRecurrentWeight, activations=["relu", "relu"], bias=0, direction="backward", initialHiddenState=1, label="", layout="zrn", recurrentBias=3, resetAfter=false, returnSequence=true);
  }

  outputs { gruOutput1; gruOutput2; }
}
